# subjects

./: .env.example  .gitignore  docker-compose.yml  reflection-notes.md
api/: Dockerfile  pyproject.toml
api/app/: config.py  db.py  jobs.py  main.py  worker.py
api/app/ai/: embeddings.py  nim.py  ollama.py  openai.py  prompts.py  provider.py  vision.py
api/app/api/: categories.py  deps.py  events.py  ingest.py  items.py  search.py  settings.py
api/app/models/: orm.py  schemas.py
api/app/pipeline/: categorize.py  categorize_prompt.py  classify.py  dedup.py  enrich.py  extract.py  provenance.py  resolve.py  run.py  subject.py
api/app/resolvers/: article.py  base.py  generic.py  github.py  movie.py  paper.py  product.py  recipe.py  registry.py  social.py  youtube.py
api/app/services/: runtime_settings.py  search.py
api/tests/: test_github_icon.py  test_media_builder.py  test_media_detect.py  test_movie_enrich_miss.py  test_prompts.py  test_provenance_describe.py  test_resolver_pick.py  test_schemas.py  test_subject.py
docs/: CAPTURE_APP_FABLE5_SPEC.md  DEPLOYMENT.md  GETTING_STARTED.md  README.md  USER_MANUAL.md  findings.md  progress.md  task_plan.md
docs/superpowers/plans/: 2026-07-12-pwa-offline-mode.md  2026-07-21-processing-engine-provenance-progress.md  2026-07-22-subject-comprehension-and-detail-panel.md
extension/: background.js  manifest.json  options.html  options.js
web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: App.tsx  index.css  sw-share-target.ts
(+32 files in other folders)
