[project]
name = "subjects-api"
version = "0.1.0"
description = "Subjects — self-hosted AI capture app (API + worker)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "procrastinate[psycopg]>=2.9",
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.2.5",
    "httpx>=0.27",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.12",
    "extruct>=0.17",
    "trafilatura>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
